--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <div id="lista-productos">
       <div class="producto" data-tipo="Ventilador">
-        <img src="https://via.placeholder.com/150" alt="Ventilador">
+        <img src="https://cdn.pixabay.com/photo/2016/08/02/22/35/fan-1567860_1280.jpg" alt="Ventilador">
         <div>
           <h3>Ventilador</h3>
           <p>Ventilador de pedestal con m£ltiples velocidades.</p>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="producto" data-tipo="Licuadora">
-        <img src="https://via.placeholder.com/150" alt="Licuadora">
+        <img src="https://cdn.pixabay.com/photo/2020/02/08/18/19/blender-4830594_1280.jpg" alt="Licuadora">
         <div>
           <h3>Licuadora</h3>
           <p>Licuadora de alta potencia para preparar batidos.</p>
@@ -144,7 +144,7 @@
       </div>
 
       <div class="producto" data-tipo="Estufa">
-        <img src="https://via.placeholder.com/150" alt="Estufa">
+        <img src="https://cdn.pixabay.com/photo/2016/11/23/14/45/kitchen-1853481_1280.jpg" alt="Estufa">
         <div>
           <h3>Estufa</h3>
           <p>Estufa de gas con 4 quemadores y horno integrado.</p>
@@ -153,7 +153,7 @@
       </div>
 
       <div class="producto" data-tipo="Freezer">
-        <img src="https://via.placeholder.com/150" alt="Freezer">
+        <img src="https://cdn.pixabay.com/photo/2017/01/10/03/57/freezer-1966707_1280.jpg" alt="Freezer">
         <div>
           <h3>Freezer</h3>
           <p>Freezer horizontal de gran capacidad.</p>
@@ -162,7 +162,7 @@
       </div>
 
       <div class="producto" data-tipo="Aire Acondicionado">
-        <img src="https://via.placeholder.com/150" alt="Aire Acondicionado">
+        <img src="https://cdn.pixabay.com/photo/2018/08/23/13/02/air-conditioner-3629392_1280.jpg" alt="Aire Acondicionado">
         <div>
           <h3>Aire Acondicionado</h3>
           <p>Aire acondicionado split de bajo consumo.</p>
@@ -171,7 +171,7 @@
       </div>
 
       <div class="producto" data-tipo="Refrigerador">
-        <img src="https://via.placeholder.com/150" alt="Refrigerador">
+        <img src="https://cdn.pixabay.com/photo/2014/12/21/23/28/refrigerator-576687_1280.png" alt="Refrigerador">
         <div>
           <h3>Refrigerador</h3>
           <p>Refrigerador de doble puerta con sistema no frost.</p>
