--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 
   <section id="inicio">
     <h1>Bienvenido a Nuestra Tienda</h1>
-    <p>Encuentra los mejores productos aqu¡.</p>
+    <p>Encuentra los mejores productos aquÂ¡.</p>
   </section>
 
   <section id="productos">
-    <h2>Electrodom‚sticos</h2>
+    <h2>ElectrodomÃ©sticos</h2>
 
     <label for="filtro">Filtrar por tipo:</label>
     <select id="filtro" onchange="filtrarProductos()">
@@ -129,7 +129,7 @@
         <img src="https://cdn.pixabay.com/photo/2016/08/02/22/35/fan-1567860_1280.jpg" alt="Ventilador">
         <div>
           <h3>Ventilador</h3>
-          <p>Ventilador de pedestal con m£ltiples velocidades.</p>
+          <p>Ventilador de pedestal con mÂ£ltiples velocidades.</p>
           <button onclick="agregarAlCarrito('Ventilador')">Agregar al carrito</button>
         </div>
       </div>
